# batamiaou

./: .gitignore  README.md  pyproject.toml  setup.py  test.py
.github/workflows/: release.yml  test.yml
batamiaou/: __init__.py  batamiaou.pyi
extension/: batamiaoumodule.c
