[project]
name = "batamiaou"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.6"
dependencies = []

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = ["ipython"]
test = ["numpy", "hypothesis", "batamiaou"]
