[project]
name = "batamiaou"
version = "0.1.1"
description = "Simulator of the child variant of the War card game"
readme = "README.md"
requires-python = ">=3.6"
dependencies = []

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = ["auditwheel>=5.3.0"]

[project.optional-dependencies]
dev = ["ipython"]
test = ["numpy", "hypothesis", "batamiaou"]
